# CMake buildfile for MBed OS Platform.
set(MBED_PLATFORM_SOURCES
	platform/ATCmdParser.h
	platform/bare_metal/mbed_lib.json
	platform/Callback.h
	platform/CircularBuffer.h
	platform/CriticalSectionLock.h
	platform/CThunk.h
	platform/cxxsupport/mstd_algorithm
	platform/cxxsupport/mstd_cstddef
	platform/cxxsupport/mstd_functional
	platform/cxxsupport/mstd_iterator
	platform/cxxsupport/mstd_memory
	platform/cxxsupport/mstd_mutex
	platform/cxxsupport/mstd_mutex.cpp
	platform/cxxsupport/mstd_new
	platform/cxxsupport/mstd_tuple
	platform/cxxsupport/mstd_type_traits
	platform/cxxsupport/mstd_utility
	platform/cxxsupport/README.md
	platform/DeepSleepLock.h
	platform/DirHandle.h
	platform/FileBase.h
	platform/FileHandle.h
	platform/FileLike.h
	platform/FilePath.h
	platform/FileSystemHandle.h
	platform/FileSystemLike.h
	platform/internal/CThunkBase.h
	platform/internal/mbed_atomic_impl.h
	platform/internal/mbed_fault_handler.h
	platform/LocalFileSystem.h
	platform/mbed_application.h
	platform/mbed_assert.h
	platform/mbed_atomic.h
	platform/mbed_chrono.h
	platform/mbed_debug.h
	platform/mbed_enum_flags.h
	platform/mbed_error.h
	platform/mbed_interface.h
	platform/mbed_lib.json
	platform/mbed_mem_trace.h
	platform/mbed_mktime.h
	platform/mbed_mpu_mgmt.h
	platform/mbed_poll.h
	platform/mbed_power_mgmt.h
	platform/mbed_preprocessor.h
	platform/mbed_retarget.h
	platform/mbed_rtc_time.h
	platform/mbed_semihost_api.h
	platform/mbed_stats.h
	platform/mbed_thread.h
	platform/mbed_toolchain.h
	platform/mbed_version.h
	platform/mbed_wait_api.h
	platform/NonCopyable.h
	platform/platform.h
	platform/PlatformMutex.h
	platform/ScopedLock.h
	platform/ScopedRamExecutionLock.h
	platform/ScopedRomWriteLock.h
	platform/SharedPtr.h
	platform/SingletonPtr.h
	platform/source/ATCmdParser.cpp
	platform/source/CriticalSectionLock.cpp
	platform/source/CThunkBase.cpp
	platform/source/FileBase.cpp
	platform/source/FileHandle.cpp
	platform/source/FilePath.cpp
	platform/source/FileSystemHandle.cpp
	platform/source/LocalFileSystem.cpp
	platform/source/mbed_assert.c
	platform/source/mbed_board.c
	platform/source/mbed_crash_data_offsets.h
	platform/source/mbed_error.c
	platform/source/mbed_error_hist.c
	platform/source/mbed_error_hist.h
	platform/source/mbed_interface.c
	platform/source/mbed_mem_trace.cpp
	platform/source/mbed_mktime.c
	platform/source/mbed_os_timer.h
	platform/source/mbed_poll.cpp
	platform/source/mbed_thread.cpp

	platform/source/SysTimer.h
	platform/Span.h
	platform/Stream.h
	platform/Transaction.h

	# Platform files which are currently not supported (but might be supported in the future)
	#platform/source/DeepSleepLock.cpp
	#platform/source/mbed_application.c
	#platform/source/mbed_atomic_impl.c
	#platform/source/mbed_power_mgmt.c
	#platform/source/mbed_os_timer.cpp
	#platform/source/mbed_rtc_time.cpp
	#platform/source/mbed_retarget.cpp
	#platform/source/mbed_stats.c
	#platform/source/SysTimer.cpp
	#platform/source/Stream.cpp

	drivers/MbedCRC.h
	drivers/MbedCRC.cpp

	events/source/equeue.c
	events/source/equeue_mbed.cpp
	events/source/EventQueue.cpp
	events/source/mbed_shared_queues.cpp

	rtos/ConditionVariable.h
	rtos/ConditionVariable.cpp
	rtos/EventFlags.h
	rtos/EventFlags.cpp
	rtos/Kernel.h
	rtos/Kernel.cpp
	rtos/Mutex.h
	rtos/Mutex.cpp
	rtos/Semaphore.h
	rtos/Semaphore.cpp
	rtos/ThisThread.h
	rtos/ThisThread.cpp
	rtos/Thread.h
	rtos/Thread.cpp)

add_library(mbed_platform ${MBED_PLATFORM_SOURCES})
target_link_libraries(mbed_platform rtxoff)
target_include_directories(mbed_platform PUBLIC
	.
	platform
	platform/cxxsupport
	drivers
	events
	fake_device
	rtos)
target_compile_options(mbed_platform PUBLIC -include ${CMAKE_CURRENT_SOURCE_DIR}/mbed-conf-benchtest.h)
